fixed top header gap to zero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,14 @@ header {
   left: 0;
   top: 0;
 }
-.header,
-header {
-  background: #000;
+html,
+body {
+  margin: 0 !important;
+  padding: 0 !important;
 }
 header {
+  top: 0 !important;
+  margin-top: 0 !important;
   width: 100% !important;
   display: flex !important;
   justify-content: space-between !important;
@@ -16,7 +19,7 @@ header {
   min-height: 80px !important;
   padding: 10px 5% !important;
   background: #000 !important;
-  position: relative !important;
+  position: sticky !important;
   left: 0 !important;
   margin: 0 !important;
   box-sizing: border-box !important;
